# graphql-polars-dagster

./: .gitignore  README.md  dagster-graphql.ipynb  pyproject.toml
example/: assets.py  dagster_csv.py  definitions.py
src/graphql_polars_example/: __init__.py
